--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,109 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+	    <!--
+        Name:Paige Dyer
+        Class: Web development
+        Project: Mapmania
+    -->
 <head>
-	<title>Node.js on Azure Template</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Paige Dyer</title>
+	<link rel="stylesheet" href="index.css">
+	<script src="index.js"> </script>
+	<h1>Welcome</h1>
+
+
 </head>
-<body>
-	<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-	<p>This repository is a template that can be used to create a Node.js and Express website for hosting on Microsoft 
-	Azure.</p>
-</body>
-</html>
+	<body onload="initApplication()">
+		<h1>Map Mania Lite v2.3</h1>
+	
+		<div id="myMapID"></div>
+		<script>
+			var gMap;
+	
+	function initMap() {
+		gMap = new google.maps.Map(document.getElementById('myMapID'), {
+			center: {lat: 41.57, lng: -87.79}, zoom:3});
+		
+		var marker = new google.maps.Marker({position:{lat:41.57, lng:-87.79}, map:gMap});
+		
+		var marker = new google.maps.Marker({position:{lat:52.41, lng:0.52}, map:gMap});
+		
+		var marker = new google.maps.Marker({position:{lat:41.06, lng:-111.97}, map:gMap});
+	
+		var marker = new google.maps.Marker({position:{lat:40.95, lng:-83.38}, map:gMap});
+	
+		var marker = new google.maps.Marker({position:{lat:38.54, lng:-89.85}, map:gMap});
+	
+		var marker = new google.maps.Marker({position:{lat:52.48, lng:0.51}, map:gMap});
+	
+		var marker = new google.maps.Marker({position:{lat:40.95, lng:-87.62}, map:gMap});
+	
+		var marker = new google.maps.Marker({position:{lat:40.11, lng:-88.21}, map:gMap});
+	
+		google.maps.event.addListener(gMap, 'idle', function(){
+			updateGame()
+		});
+	}
+	
+	function updateGame() {
+		console.log('function UpdateGame()');
+		var zoomLevel = gMap.getZoom()
+		var inBounds = false;
+	
+		if (gMap.getBounds().contains({lat:41.57,lng:-87.79})){
+			inBounds = true;
+		}
+		console.log("inBounds:"+inBounds+"zoomLevel:"+zoomLevel);
+	
+		if (gMap.getBounds().contains({lat:52.41,lng:0.52})){
+			inBounds = true;
+		}
+		console.log("inBounds:"+inBounds+"zoomLevel:"+zoomLevel);
+	
+		if (gMap.getBounds().contains({lat:41.06,lng:-111.97})){
+			inBounds = true;
+		}
+		console.log("inBounds:"+inBounds+"zoomLevel:"+zoomLevel);
+	
+		if (gMap.getBounds().contains({lat:40.95,lng:-83.38})){
+			inBounds = true;
+		}
+		console.log("inBounds:"+inBounds+"zoomLevel:"+zoomLevel);
+	
+		if (gMap.getBounds().contains({lat:38.54,lng:-89.85})){
+			inBounds = true;
+		}
+		console.log("inBounds:"+inBounds+"zoomLevel:"+zoomLevel);
+	
+		if (gMap.getBounds().contains({lat:52.48,lng:0.51})){
+			inBounds = true;
+		}
+		console.log("inBounds:"+inBounds+"zoomLevel:"+zoomLevel);
+	
+		if (gMap.getBounds().contains({lat:40.95,lng:-87.62})){
+			inBounds = true;
+		}
+		console.log("inBounds:"+inBounds+"zoomLevel:"+zoomLevel);
+	
+		if (gMap.getBounds().contains({lat:40.11,lng:-88.21})){
+			inBounds = true;
+		}
+		console.log("inBounds:"+inBounds+"zoomLevel:"+zoomLevel);
+	
+	}
+	
+	function initApplication() {
+		console.log('Map mania - starting');
+	}
+		</script>
+	
+		<script async defer 
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCW5ZHV2_CpU8wlUasENXzokrGuTro_N9s&callback=initMap">
+		</script>
+	
+		
+	</body>
+	</html>
