--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	    <!--
         Name:Paige Dyer
@@ -12,12 +12,12 @@
 	<title>Paige Dyer</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js"> </script>
-	<h1>Welcome</h1>
+	<h1 style="color:rgb(199, 8, 167);">Welcome</h1>
 
 
 </head>
 	<body onload="initApplication()">
-		<h1>Map Mania Lite v2.3</h1>
+		<h2>Have Fun</h2>
 	
 		<div id="myMapID"></div>
 		<script>
