--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Paige Dyer</title>
+	<title>Map Mania 2</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js"> </script>
 	<h1 style="color:#c708a7;">Welcome</h1>
@@ -20,10 +20,7 @@
 		<h2 style="color:#c708a7;">Have Fun</h2>
 	
 		<div id="myMapID"></div>
-
-		<p>
-
-		</p>	
+	
 
 		<script async defer 
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCW5ZHV2_CpU8wlUasENXzokrGuTro_N9s&callback=initMap">
