--- a/client/index.html
+++ b/client/index.html
@@ -17,10 +17,12 @@
 
 </head>
 	<body onload="initApplication()">
-		<h2 style="color:#c708a7;">Have Fun</h2>
-	
+		<h2 style="color:#c708a7;">
+		
+		<label for="">City <input type="text" class="reg-input-city" placeholder="City"></label>
+
 		<div id="myMapID"></div>
-	
+	</h2>
 
 		<script async defer 
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCW5ZHV2_CpU8wlUasENXzokrGuTro_N9s&callback=initMap">
