--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,23 @@
 	<title>Map Mania 2</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js"> </script>
-	<h1 style="color:#c708a7;">Welcome</h1>
+	<h1 style="color:#c708a7;"> <b>Welcome!</b>
+	</h1>
 
 
 </head>
 	<body onload="initApplication()">
+		<p>Click and drag to move around. You can only zoom out so far. Find each area listed below<p> 
+		<p>1 - This monument is the last of the eight wonders of the ancient world<p>
+		<p>2 - This monument is the most visited tourist spot</p>
+		<p>3 - This spot is known for dropping a ball for New Year's Eve</p> 
+		<p>4 - This monument is the most famous clock in the world</p>
+		<p>5 - This monument is known for concerts held here</p>
+		<p>6 - This monument is large statue depicting Jesus</p>
+		<p>7 - This is the sight of gladiator fights</p> 
+		<p>8 - Several people risk their lives yearly to climb this monument</p>
+		
+
 		<h2 style="color:#c708a7;">
 		
 		<label for="">City <input type="text" class="reg-input-city" placeholder="City"></label>
