--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 	    <!--
         Name:Paige Dyer
         Class: Web development
-        Project: Mapmania
+        Project: Mapmania 2
     -->
 <head>
 	<meta charset="UTF-8">
@@ -24,9 +24,9 @@
 		<p>3 - This spot is known for dropping a ball for New Year's Eve</p> 
 		<p>4 - This monument is the most famous clock in the world</p>
 		<p>5 - This monument is known for concerts held here</p>
-		<p>6 - This monument is large statue depicting Jesus</p>
+		<p>6 - This monument is a large statue depicting Jesus</p>
 		<p>7 - This is the sight of gladiator fights</p> 
-		<p>8 - Several people risk their lives yearly to climb this monument</p>
+		<p>8 - Several people risk their lives yearly to climb this mountain</p>
 		
 
 		<h2 style="color:#c708a7;">
