--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 
 </head>
 	<body onload="initApplication()">
-		<p>Click and drag to move around. You can only zoom out so far. Find each area listed below<p> 
+		<p>Find each area listed below in order and click<p> 
 		<p>1 - This monument is the last of the eight wonders of the ancient world<p>
 		<p>2 - This monument is the most visited tourist spot</p>
 		<p>3 - This spot is known for dropping a ball for New Year's Eve</p> 
