--- a/client/index.html
+++ b/client/index.html
@@ -12,29 +12,41 @@
 	<title>Map Mania 2</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js"> </script>
-	<h1 style="color:#c708a7;"> <b>Welcome!</b>
+	<h1 style="color:#c708a7;"> <b>Welcome! Scroll Down</b>
 	</h1>
 
 
 </head>
 	<body onload="initApplication()">
 		<p>Find each area listed below in order and click<p> 
+		
 		<p>1 - This monument is the last of the eight wonders of the ancient world<p>
+			<button type="button" onclick="alert('Egypt')">Hint</button>	
 		<p>2 - This monument is the most visited tourist spot</p>
+			<button type="button" onclick="alert('Europe')">Hint</button>
 		<p>3 - This spot is known for dropping a ball for New Year's Eve</p> 
+			<button type="button" onclick="alert('Largest City In its country')">Hint</button>
 		<p>4 - This monument is the most famous clock in the world</p>
+			<button type="button" onclick="alert('Recently celebrated a new King')">Hint</button>
 		<p>5 - This monument is known for concerts held here</p>
+			<button type="button" onclick="alert('This continent is a country')">Hint</button>
 		<p>6 - This monument is a large statue depicting Jesus</p>
+			<button type="button" onclick="alert('South America')">Hint</button>
 		<p>7 - This is the sight of gladiator fights</p> 
+			<button type="button" onclick="alert('Where is pizza from?')">Hint</button>
 		<p>8 - Several people risk their lives yearly to climb this mountain</p>
+			<button type="button" onclick="alert('On a border')">Hint</button>
 		
 
-		<h2 style="color:#c708a7;">
+		<h2> 
+			
+			Score:<input type="text" value="" size="2" disabled>
+			
+		</h2>
 		
-		<label for="">City <input type="text" class="reg-input-city" placeholder="City"></label>
-
+	
 		<div id="myMapID"></div>
-	</h2>
+	
 
 		<script async defer 
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCW5ZHV2_CpU8wlUasENXzokrGuTro_N9s&callback=initMap">
