--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 	<title>Map Mania 2</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js"> </script>
-	<h1 style="color:#c708a7;"> <b>Welcome! Scroll Down</b>
+	<h1> <b>Welcome!</b>
 	</h1>
 
 
@@ -40,7 +40,7 @@
 
 		<h2> 
 			
-			Score:<input type="text" value="" size="2" disabled>
+			Score:<input type="number" value="" size="2" enable>
 			
 		</h2>
 		
