added new marks

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
 		<p>3 - This spot is known for dropping a ball for New Year's Eve</p> 
 			<button type="button" onclick="alert('Largest City In its country')">Hint</button>
 		<p>4 - This monument is the most famous clock in the world</p>
-			<button type="button" onclick="alert('Recently celebrated a new King')">Hint</button>
+			<button type="button" onclick="alert('Recently crowned a new King')">Hint</button>
 		<p>5 - This monument is known for concerts held here</p>
 			<button type="button" onclick="alert('This continent is a country')">Hint</button>
 		<p>6 - This monument is a large statue depicting Jesus</p>
@@ -40,7 +40,7 @@
 
 		<h2> 
 			
-			Score:<input type="number" value="" size="2" enable>
+			Score:<input type="number" value="0" size="2" enable>
 			
 		</h2>
 		
