--- a/client/index.html
+++ b/client/index.html
@@ -38,11 +38,9 @@
 			<button type="button" onclick="alert('On a border')">Hint</button>
 		
 
-		<h2> 
-			
-			Score:<input type="number" value="0" size="2" enable>
-			
-		</h2>
+		<h2 id = "cheats" ondblclick = "fun()"> Double click for answers</h2>
+
+		<h3 id="score" onclick="ShowScore()">Click to Show Score</h3>
 		
 	
 		<div id="myMapID"></div>
