--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
 
 		<h2 id = "cheats" ondblclick = "fun()"> Double click for answers</h2>
 
-		<h3 id="score" onclick="ShowScore()">Click to Show Score</h3>
+		<h3>Score: <input type="text" id="score" value="0" size="2" disabled>  </h3> 
 		
 	
 		<div id="myMapID"></div>
